--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             'color: #88CCCC; background: #fff; padding:5px 0;',
       ];
       console.log(...args);
-      var container = document.getElementById("eggtap");
-      new EggTap.EggTapApp(container, EggTap.EggTapColors, EggTap.EggTapAnimations)
+
+      new EggTap.EggTapApp("eggtap", EggTap.EggTapColors, EggTap.EggTapAnimations)
     });
     
   </script>
