--- a/template.html
+++ b/template.html
@@ -7,6 +7,7 @@
   <title>EggTronic's WarmaTap</title>
   <meta name="description" content="EggTronic's WarmaTap">
   <meta name="author" content="WarmaTap">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/5.3.3/pixi.min.js" integrity="sha512-J7UHpLx39bpqtP+aWP6yIuXroFk0XPkDQaS9zDthM4TVeaXstWYh556gxsXwwIwpAPSoKqVHW+eqz3B93SpyKg==" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/pixi-layers@0.3.1/dist/pixi-layers.min.js"></script>
